--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -2,6 +2,7 @@ $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
 
+$color-background: #f6f6f6;
 $color-grey-1: #353535;
 $color-grey-2: #eaeaea;
 
