--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -7,5 +7,11 @@ $color-grey-1: #353535;
 $color-grey-2: #eaeaea;
 
 $font-title: "Shrikhand", cursive;
+
 $font-text: "Roboto", sans-serif;
+$font-size-0_94: 0.94019rem;
 $font-size-1: 1rem;
+$font-size-1_06: 1.0625rem;
+$font-size-1_12: 1.125rem;
+$font-size-1_5: 1.5rem;
+$font-size-1_75: 1.75rem;
