--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -2,6 +2,19 @@ $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
 
+$gradiant-primary: linear-gradient(
+  193deg,
+  $color-primary -11.44%,
+  $color-secondary 123.93%
+);
+
+$gradiant-secondary: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.15) 0%,
+    rgba(255, 255, 255, 0.15) 100%
+  ),
+  linear-gradient(201deg, $color-primary -5.2%, #ff79da 110.74%);
+
 $color-background: #f6f6f6;
 $color-grey-1: #353535;
 $color-grey-2: #eaeaea;
