feat(index.html): restructure hero section for better semantics and styling feat(SCSS): add styles for the title and section-hero for improved layout and readability

--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -26,3 +26,11 @@
     cursor: pointer;
   }
 }
+
+.title {
+  font-family: $font-text;
+  font-size: $font-size-1_5;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0;
+}
