--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -1,3 +1,10 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -44,6 +51,42 @@
         line-height: normal;
         color: $color-grey-1;
       }
+    }
+  }
+}
+
+.section-hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.37rem 1.875rem 3.62rem 1.875rem;
+  gap: 1.9375rem;
+  &--container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.75rem;
+
+    &--title {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0rem 2rem;
+      .title {
+        text-align: center;
+      }
+    }
+
+    .subtitle {
+      margin: 0;
+
+      font-family: $font-text;
+      font-size: $font-size-1_06;
+      font-weight: 300;
+      line-height: normal;
+      text-align: center;
+      line-height: normal;
     }
   }
 }
