--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -90,3 +90,11 @@
     }
   }
 }
+
+.section-fonctionnement {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 3rem 1.25rem 4.25rem 1.25rem;
+  gap: 1.9375rem;
+}
