--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -34,3 +34,44 @@
   line-height: normal;
   margin: 0;
 }
+
+.step {
+  display: flex;
+  align-items: center;
+  padding: 1.63rem 2.38rem 1.63rem 0.5rem;
+
+  background-color: $color-background;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 1.25rem;
+
+  .step-number {
+    position: relative;
+    display: flex;
+    left: -1.25rem;
+    justify-content: center;
+    align-items: center;
+    width: 1.5rem;
+    height: 1.5rem;
+
+    background-color: $color-primary;
+    color: white;
+    border-radius: 50%;
+
+    font-size: 0.88638rem;
+    font-family: $font-text;
+  }
+
+  .step-content {
+    display: inline-flex;
+    align-items: center;
+    gap: 1.68738rem;
+  }
+
+  span {
+    color: #000;
+
+    font-family: $font-text;
+    font-size: $font-size-1;
+    font-weight: 500;
+  }
+}
