--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -97,4 +97,10 @@
   background-color: white;
   padding: 3rem 1.25rem 4.25rem 1.25rem;
   gap: 1.9375rem;
+
+  .steps-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.56rem;
+  }
 }
