--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -99,6 +99,7 @@
   gap: 1.9375rem;
 
   .steps-container {
+    padding-left: 0.25rem;
     display: flex;
     flex-direction: column;
     gap: 1.56rem;
