--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -44,6 +44,8 @@
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   border-radius: 1.25rem;
 
+  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
   .step-number {
     position: relative;
     display: flex;
@@ -73,5 +75,11 @@
     font-family: $font-text;
     font-size: $font-size-1;
     font-weight: 500;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: $color-grey-2;
+    box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.15);
   }
 }
