feat: Add 'Restaurants' section to index.html and corresponding styles in _layout.scss for improved webpage content and structure

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -105,3 +105,10 @@
     gap: 1.56rem;
   }
 }
+
+.section-restaurants {
+  display: flex;
+  flex-direction: column;
+  padding: 3.38rem 1.25rem 4.12rem 1.25rem;
+  gap: 1.12rem;
+}
