feat(index.html): add multiple restaurant cards to showcase restaurant options with images, titles, and badges
style(components.scss): create styles for restaurant cards and heart interaction for enhanced visual appeal

style(layout.scss): adjust layout and gap between elements for better user experience and readability

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -110,5 +110,11 @@
   display: flex;
   flex-direction: column;
   padding: 3.38rem 1.25rem 4.12rem 1.25rem;
-  gap: 1.12rem;
+  gap: 1.25rem;
+
+  .restaurants-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.13rem;
+  }
 }
