--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -83,3 +83,123 @@
     box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.15);
   }
 }
+
+.restaurant-card {
+  display: flex;
+  flex-direction: column-reverse;
+
+  background-color: white;
+  border-radius: 0.9375rem;
+  overflow: hidden;
+
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+
+  transition: box-shadow 0.3s ease-in-out;
+
+  .image-wrapper {
+    display: flex;
+    position: relative;
+
+    align-items: start;
+    img {
+      width: 100%;
+      max-height: 10.875rem;
+      display: block;
+      object-fit: cover;
+    }
+
+    .badge {
+      position: absolute;
+      top: 0.81rem;
+      right: 0.75rem;
+      padding: 0.4rem 0.73rem;
+
+      border-radius: 0.125rem;
+      background-color: $color-tertiary;
+      box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+      color: #008766;
+
+      font-family: $font-text;
+      font-size: $font-size-0_94;
+      font-weight: 550;
+      text-align: center;
+    }
+  }
+
+  .card-content {
+    display: flex;
+    padding: 1rem 1.56rem 1rem 0.81rem;
+    justify-content: space-between;
+
+    .card-content-header {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 0.25rem;
+
+      h3 {
+        margin: 0;
+
+        font-family: $font-text;
+        font-size: $font-size-1_12;
+        font-weight: 700;
+      }
+
+      p {
+        margin: 0;
+
+        font-family: $font-text;
+        font-size: $font-size-1;
+        font-weight: 300;
+      }
+    }
+  }
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.heart-container {
+  margin-top: 0.25rem;
+  position: relative;
+  width: 22px;
+  height: 21px;
+  display: inline-block;
+}
+
+.heart-stroke {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.heart-clip {
+  appearance: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  cursor: pointer;
+}
+
+.heart-clip + .fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.08);
+
+  clip-path: inset(100% 0 0 0);
+  transition: clip-path 0.5s ease-in-out;
+  z-index: 2;
+}
+
+.heart-clip:checked + .fill {
+  clip-path: inset(0 0 0 0);
+}
