--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -203,3 +203,25 @@
 .heart-clip:checked + .fill {
   clip-path: inset(0 0 0 0);
 }
+
+.footer-link {
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+
+  color: white;
+  font-family: $font-text;
+  font-size: $font-size-1;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+  &--icon {
+    height: 0.8525rem;
+  }
+
+  &.iconed {
+    color: white;
+    font-weight: 500;
+  }
+}
