--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -118,3 +118,19 @@
     gap: 1.13rem;
   }
 }
+
+.footer {
+  display: flex;
+  padding: 1.375rem 1.5625rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+
+  background: var(--Grey, #353535);
+
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4375rem;
+  }
+}
