feat(layout.scss): add hover effect for menu items with scale and opacity transitions to enhance user interaction feat(variables.scss): define new color and transition duration variables for better maintenance and consistency in styles

--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -18,6 +18,7 @@ $gradiant-secondary: linear-gradient(
 $color-background: #f6f6f6;
 $color-grey-1: #353535;
 $color-grey-2: #eaeaea;
+$color-grey-3: rgb(242, 242, 242);
 
 $font-title: "Shrikhand", cursive;
 
@@ -28,3 +29,6 @@ $font-size-1_06: 1.0625rem;
 $font-size-1_12: 1.125rem;
 $font-size-1_5: 1.5rem;
 $font-size-1_75: 1.75rem;
+
+$check-width: 3.6875rem;
+$transition-duration: 0.3s;
