--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -27,6 +27,12 @@
         display: flex;
         position: absolute;
         left: 1.06rem;
+        transition: scale, opacity $transition-duration ease;
+        &:hover {
+          scale: 1.03;
+          cursor: pointer;
+          opacity: 0.95;
+        }
       }
     }
   }
@@ -116,6 +122,20 @@
     display: flex;
     flex-direction: column;
     gap: 1.13rem;
+  }
+}
+
+.section-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  padding: 0rem 0.88rem;
+
+  .menus {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    width: 100%;
   }
 }
 
