style(layout.scss): add hover effect for footer links

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -152,5 +152,12 @@
     display: flex;
     flex-direction: column;
     gap: 0.4575rem;
+
+    .footer-link {
+      transition: opacity $transition-duration ease;
+      &:hover {
+        opacity: 0.8;
+      }
+    }
   }
 }
