--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -120,8 +120,8 @@
       color: #008766;
 
       font-family: $font-text;
-      font-size: $font-size-0_94;
-      font-weight: 550;
+      font-size: $font-size-0_87;
+      font-weight: 500;
       text-align: center;
     }
   }
@@ -213,7 +213,7 @@
   font-family: $font-text;
   font-size: $font-size-1;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: normal;
   text-decoration: none;
   &--icon {
@@ -243,7 +243,9 @@
     position: relative;
     font-family: $font-text;
     font-size: $font-size-1;
-    font-weight: bold;
+    font-weight: 400;
+    font-style: normal;
+
     text-transform: uppercase;
     letter-spacing: 1px;
     padding-bottom: 8px;
@@ -253,8 +255,8 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 40px;
-    height: 3px;
+    width: 2.5rem;
+    height: 0.1875rem;
     background-color: #99e2d0;
   }
 }
@@ -265,6 +267,13 @@
 
 @mixin transition {
   transition: all $transition-duration ease;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  max-height: 23.9375rem;
+  object-fit: cover;
 }
 
 // Menu Item Styles
@@ -317,7 +326,7 @@
     margin: 0;
     font-family: $font-text;
     font-size: $font-size-1_12;
-    font-weight: bold;
+    font-weight: 500;
     padding-right: $check-width - 0.938rem;
     white-space: nowrap;
     overflow: hidden;
@@ -337,6 +346,7 @@
     font-family: $font-text;
     font-size: $font-size-0_94;
     white-space: nowrap;
+    font-weight: 300;
     overflow: hidden;
     text-overflow: ellipsis;
     flex-grow: 1;
@@ -346,7 +356,7 @@
   &__price {
     font-family: $font-text;
     font-size: $font-size-0_94;
-    font-weight: bold;
+    font-weight: 700;
     white-space: nowrap;
   }
 
