style(variables.scss): change font-family for $font-title from cursive to serif for better readability
 style(variables.scss): add $font-size-0_87 variable to standardize font sizes across the project

--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -20,9 +20,10 @@ $color-grey-1: #353535;
 $color-grey-2: #eaeaea;
 $color-grey-3: rgb(242, 242, 242);
 
-$font-title: "Shrikhand", cursive;
+$font-title: "Shrikhand", serif;
 
 $font-text: "Roboto", sans-serif;
+$font-size-0_87: 0.875rem;
 $font-size-0_94: 0.94019rem;
 $font-size-1: 1rem;
 $font-size-1_06: 1.0625rem;
