--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -123,7 +123,12 @@
   display: flex;
   flex-direction: column;
   padding: 3.38rem 1.25rem 4.12rem 1.25rem;
-  gap: 1.25rem;
+
+  &--container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+  }
 
   .restaurants-container {
     display: flex;
@@ -210,12 +215,40 @@
 @media (min-width: 1024px) {
   .section-fonctionnement {
     padding: 3.12rem 11.25rem;
-    .steps-container {
-      flex-direction: row;
+    align-items: center;
+    &--container {
       width: 100%;
-      gap: 2.28rem;
-      .step {
+      max-width: 65.8125rem;
+
+      .steps-container {
+        flex-direction: row;
         width: 100%;
+        gap: 2.28rem;
+        .step {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  .section-restaurants {
+    padding: 1.88rem 11.25rem;
+    align-items: center;
+    &--container {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      max-width: 65.8125rem;
+      gap: 1.75rem;
+      .restaurants-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 6.25rem;
+        row-gap: 3.13rem;
+
+        .restaurant-card {
+          width: 100%;
+        }
       }
     }
   }
