--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -52,12 +52,12 @@
     left: -1.25rem;
     justify-content: center;
     align-items: center;
-    width: 1.5rem;
-    height: 1.5rem;
+    min-width: 1.5rem;
+    min-height: 1.5rem;
 
     background-color: $color-primary;
     color: white;
-    border-radius: 50%;
+    border-radius: 100px;
 
     font-size: 0.88638rem;
     font-family: $font-text;
