--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -1,7 +1,14 @@
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   margin: 0px;
   padding: 0px;
   background-color: $color-background;
+}
+
+main {
+  flex-grow: 1;
 }
 
 h1,
