style(layout.scss): improve responsiveness and layout structure for better readability and user experience

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -219,6 +219,14 @@
 }
 
 @media (min-width: 1024px) {
+  .section-menu {
+    .restaurant-info {
+      max-width: 19.1875rem;
+      justify-content: center;
+      gap: 1.5rem;
+    }
+  }
+
   .footer {
     align-items: center;
     justify-content: end;
