--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -293,3 +293,34 @@
     }
   }
 }
+
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999; // Assurez-vous que le loader est au-dessus de tout le contenu
+  animation: fadeOut 3s forwards; // Animation pour masquer le loader
+
+  img {
+    width: 10rem; // Ajustez la taille selon vos besoins
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1; // Visible au début
+  }
+  99% {
+    opacity: 1; // Reste visible jusqu'à presque la fin
+  }
+  100% {
+    opacity: 0; // Devenir invisible à la fin
+    visibility: hidden; // Masquer complètement
+  }
+}
