--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -18,7 +18,7 @@
     box-shadow 0.3s ease-in-out;
 
   &:hover {
-    color: rgb(28, 28, 28); //TODO: fix color for accesibility
+    //color: rgb(28, 28, 28); //TODO: fix color for accesibility
     background: $gradiant-secondary;
     background-size: 200% 100%;
     background-position: 0 0;
@@ -236,6 +236,35 @@
   align-items: center;
   gap: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.menu-animation {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: appear 1s ease forwards;
+}
+
+.menu-animation--1 {
+  animation-delay: 0.2s;
+}
+
+.menu-animation--2 {
+  animation-delay: 0.6s;
+}
+
+.menu-animation--3 {
+  animation-delay: 1s;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .menus {
