style(components): remove commented color TODO for accessibility - remove obsolete TODO comment regarding color accessibility - maintain existing hover styles without impact

--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -18,7 +18,7 @@
     box-shadow 0.3s ease-in-out;
 
   &:hover {
-    //color: rgb(28, 28, 28); //TODO: fix color for accesibility
+    //color: rgb(28, 28, 28);
     background: $gradiant-secondary;
     background-size: 200% 100%;
     background-position: 0 0;
