--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -163,46 +163,37 @@
 }
 
 .heart-container {
-  margin-top: 0.25rem;
   position: relative;
+  cursor: pointer;
   width: 22px;
   height: 21px;
-  display: inline-block;
-}
 
-.heart-stroke {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
+  .heart-stroke {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    transition: opacity 0.3s ease-in-out;
+  }
 
-.heart-clip {
-  appearance: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 3;
-  cursor: pointer;
-}
+  .fill {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
 
-.heart-clip + .fill {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: scale(1.08);
+  &:hover {
+    .heart-stroke {
+      opacity: 0;
+    }
 
-  clip-path: inset(100% 0 0 0);
-  transition: clip-path 0.5s ease-in-out;
-  z-index: 2;
-}
-
-.heart-clip:checked + .fill {
-  clip-path: inset(0 0 0 0);
+    .fill {
+      opacity: 1;
+    }
+  }
 }
 
 .footer-link {
@@ -321,24 +312,13 @@
     cursor: pointer;
     background-color: $color-grey-2;
     box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.15);
-  }
 
-  &__checkbox {
-    position: absolute;
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    z-index: 10;
+    .menu-item__content {
+      width: calc(100% - #{$check-width});
+    }
 
-    &:checked {
-      ~ .menu-item__content {
-        width: calc(100% - #{$check-width});
-      }
-
-      ~ .menu-item__check {
-        transform: translateX(0);
-      }
+    .menu-item__check {
+      transform: translateX(0);
     }
   }
 
