--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,10 @@ a {
   display: flex;
   position: absolute;
   left: 1.06rem;
-  transition: scale, opacity 0.3s ease;
+  transition: transform, opacity 0.3s ease;
 }
 .header .header-container--with-goback .goback-container:hover {
-  scale: 1.03;
+  transform: scale(1.03);
   cursor: pointer;
   opacity: 0.95;
 }
@@ -448,45 +448,31 @@ a {
 }
 
 .heart-container {
-  margin-top: 0.25rem;
   position: relative;
+  cursor: pointer;
   width: 22px;
   height: 21px;
-  display: inline-block;
 }
-
-.heart-stroke {
+.heart-container .heart-stroke {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  transition: opacity 0.3s ease-in-out;
+}
+.heart-container .fill {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
-
-.heart-clip {
-  appearance: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 3;
-  cursor: pointer;
+.heart-container:hover .heart-stroke {
+  opacity: 0;
 }
-
-.heart-clip + .fill {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: scale(1.08);
-  clip-path: inset(100% 0 0 0);
-  transition: clip-path 0.5s ease-in-out;
-  z-index: 2;
-}
-
-.heart-clip:checked + .fill {
-  clip-path: inset(0 0 0 0);
+.heart-container:hover .fill {
+  opacity: 1;
 }
 
 .footer-link {
@@ -591,18 +577,10 @@ a {
   background-color: #eaeaea;
   box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.15);
 }
-.menu-item__checkbox {
-  position: absolute;
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  z-index: 10;
-}
-.menu-item__checkbox:checked ~ .menu-item__content {
+.menu-item:hover .menu-item__content {
   width: calc(100% - 3.6875rem);
 }
-.menu-item__checkbox:checked ~ .menu-item__check {
+.menu-item:hover .menu-item__check {
   transform: translateX(0);
 }
 .menu-item__content {
